--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html>
 <head>
   <link rel="stylesheet" type="text/css" href"mycss.css">
 </head>
@@ -5,3 +7,4 @@
   <div class="parallax">
   </div>
 </body>
+</html>
