--- a/index.html
+++ b/index.html
@@ -4,7 +4,20 @@
   <link rel="stylesheet" type="text/css" href="mycss.css">
 </head>
 <body>
-  <div class="parallax">
+  <div class="name">
+    <h1>Quang-Tri Do</h1>
+  </div>
+  <div class="parallax" id="first"></div>
+  <div class="info">
+    <p>Hi, my name is Quang-Tri and I am a student at the University of Ottawa studying Software Engineering. My passion for programming started when
+      I first learned about the foundations of coding such as the program structure and conditionals. I find creating solutions to problems using these
+      concepts incredibly fulfilling and interesting. I have a strong desire to improve my programming and motivated to learn as much as I can.
+      In my spare time I like working on android applications, reading or just learning how to improve my coding.
+    </p>
+  </div>
+  <div class="languages">
+    <h2>Languages</h2>
+    <img src="images/mainLG2.png">
   </div>
 </body>
 </html>
