--- a/index.html
+++ b/index.html
@@ -2,22 +2,36 @@
 <html>
 <head>
   <link rel="stylesheet" type="text/css" href="mycss.css">
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+  <script>
+  $(window).scroll(function() {
+    var bottom_of_window = $(window).scrollTop() + $(window).height()-100;
+    $('.fade').each(function(){
+      var bottom_of_object = $('img').position().top + $('.img').outerHeight();
+      if (bottom_of_window > bottom_of_object) {
+        if ($(this).css("opacity")==0) {$(this).fadeTo(700,1);}
+       } else {
+        if ($(this).css("opacity")==1) {$(this).fadeTo(700,0);}
+       }
+     });
+  });
+  </script>
 </head>
 <body>
-  <div class="name">
-    <h1>Quang-Tri Do</h1>
-  </div>
   <div class="parallax" id="first"></div>
   <div class="info">
     <p>Hi, my name is Quang-Tri and I am a student at the University of Ottawa studying Software Engineering. My passion for programming started when
       I first learned about the foundations of coding such as the program structure and conditionals. I find creating solutions to problems using these
       concepts incredibly fulfilling and interesting. I have a strong desire to improve my programming and motivated to learn as much as I can.
-      In my spare time I like working on android applications, reading or just learning how to improve my coding.
+      In my spare time I like working on android applications, reading, and practicing my programming.
     </p>
   </div>
+  <div class="parallax" id="second"></div>
   <div class="languages">
     <h2>Languages</h2>
+    <div class='fade'>
     <img src="images/mainLG2.png">
+  </div>
   </div>
 </body>
 </html>
