--- a/index.html
+++ b/index.html
@@ -26,10 +26,12 @@
       In my spare time I like working on android applications, reading, and practicing my programming.
     </p>
   </div>
-  <div class="parallax" id="second"></div>
+  <!--<div class="parallax" id="second"></div> -->
   <div class="languages fade">
     <h2>Languages</h2>
     <img src="images/mainLG2.png">
   </div>
+  <div class="fade">
+    
 </body>
 </html>
