--- a/index.html
+++ b/index.html
@@ -4,16 +4,18 @@
   <link rel="stylesheet" type="text/css" href="mycss.css">
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
   <script>
-  $(window).scroll(function() {
-    var bottom_of_window = $(window).scrollTop() + $(window).height();
-    $('.fade').each(function(){
-      var bottom_of_object = $(this).position().top + $(this).outerHeight();
-      if (bottom_of_window > bottom_of_object) {
-        if ($(this).css("opacity")==0) {$(this).fadeTo(700,1);}
-       } else {
-        if ($(this).css("opacity")==1) {$(this).fadeTo(700,0);}
-       }
-     });
+  $(document).ready(function(){
+    $(window).scroll(function() {
+      var bottom_of_window = $(window).scrollTop() + $(window).height();
+      $('.fade').each(function(){
+        var bottom_of_object = $(this).position().top + $(this).outerHeight();
+        if (bottom_of_window > bottom_of_object) {
+          if ($(this).css("opacity")==0) {$(this).fadeTo(700,1);}
+         } else {
+          if ($(this).css("opacity")==1) {$(this).fadeTo(700,0);}
+         }
+       });
+    });
   });
   </script>
 </head>
@@ -32,6 +34,6 @@
     <img src="images/mainLG2.png">
   </div>
   <div class="fade">
-    
+
 </body>
 </html>
