--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
   <script type="text/javascript"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script>
+  <!--Fades in elements on scroll down> -->
   $(document).ready(function(){
     $(window).scroll(function() {
-      var bottom_of_window = $(window).scrollTop() + $(window).height();
+      var bottom_of_window = $(window).scrollTop() + $(window).height()+100;
       $('.fade').each(function(){
         var bottom_of_object = $(this).position().top + $(this).outerHeight();
         if (bottom_of_window > bottom_of_object) {
-          if ($(this).css("opacity")==0) {$(this).fadeTo(700,1);}
+          if ($(this).css("opacity")==0) {$(this).fadeTo(300,1);}
          } else {
-          if ($(this).css("opacity")==1) {$(this).fadeTo(700,0);}
+          if ($(this).css("opacity")==1) {$(this).fadeTo(300,0);}
          }
        });
     });
@@ -29,12 +30,25 @@
       In my spare time I like working on android applications, reading, and practicing my programming.
     </p>
   </div>
-  <!--<div class="parallax" id="second"></div> -->
-  <div class="languages fade">
+  <!-- <div class="parallax" id="second"></div> -->
+  <div class="centered fade">
     <h2>Languages</h2>
     <img src="images/mainLG2.png">
   </div>
   <div class="fade">
+    <h3>Programming</h3>
+    <ul>
+     <li>Efficient coding ability in C++ and Java as well as good knowledge of HTML/CSS and Javascript/Jquery</li>
+     <li>Learned C++ language through online resources as well as by completing programming exercises</li>
+     <li>Knowledge of common search and sorting algorithms through coding a circle the dot game</li>
+    </ul>
+    <ul>
+      <li>Knowledgeable in concepts and applications of classes, inheritance and objects through courses and practice</li>
+      <li>Strong desire to learn and capable of learning a new language quickly</li>
+      <li>Strong knowledge of the different types of data structures through courses and by consulting the documentation</li>
+      <li>Critical thinking and problem solving when planning a program</li>
+    </ul>
+  </div>
 
 </body>
 </html>
