--- a/index.html
+++ b/index.html
@@ -12,11 +12,17 @@
       $('.fade').each(function(){
         var bottom_of_object = $(this).position().top + $(this).outerHeight();
         if (bottom_of_window > bottom_of_object) {
-          if ($(this).css("opacity")==0) {$(this).fadeTo(300,1);}
+          if ($(this).css("opacity")==0) {$(this).fadeTo(500,1);}
          } else {
-          if ($(this).css("opacity")==1) {$(this).fadeTo(300,0);}
+          if ($(this).css("opacity")==1) {$(this).fadeTo(500,0);}
          }
        });
+      $('.slide').each(function(){
+        var bottom_of_object = $(this).position().top + $(this).outerHeight();
+        if (bottom_of_window > bottom_of_object){
+          $(this).addClass('slide-in-left');
+        }
+      });
     });
   });
   </script>
@@ -37,15 +43,15 @@
      <li>Efficient coding ability in C++ and Java as well as good knowledge of HTML/CSS and Javascript/Jquery</li>
      <li>Learned C++ language through online resources as well as by completing programming exercises</li>
      <li>Knowledge of common search and sorting algorithms through coding a circle the dot game</li>
+     <li>Critical thinking and problem solving when planning a program</li>
     </ul>
     <ul>
       <li>Knowledgeable in concepts and applications of classes, inheritance and objects through courses and practice</li>
       <li>Strong desire to learn and capable of learning a new language quickly</li>
       <li>Strong knowledge of the different types of data structures through courses and by consulting the documentation</li>
-      <li>Critical thinking and problem solving when planning a program</li>
     </ul>
   </div>
-  <div class="centered fade">
+  <div class="centered slide" style="opacity:0">
     <h2>Languages</h2>
     <img src="images/mainLG2.png">
   </div>
