cleaned up display

--- a/index.html
+++ b/index.html
@@ -28,6 +28,14 @@
   </script>
 </head>
 <body>
+  <div>
+    <ul class="nav">
+      <li><a href="">Programming</a></li>
+      <li><a href="">Communication</a></li>
+      <li><a href="">Work Experience</a></li>
+      <li><a href="">Projects</a></li>
+    </ul>
+  </div>
   <div class="parallax" id="first"></div>
   <div class="info">
     <p>Hi, my name is Quang-Tri and I am a student at the University of Ottawa studying Software Engineering. My passion for programming started when
@@ -40,10 +48,10 @@
   <div class="fade">
     <h3>Programming</h3>
     <ul>
-     <li>Efficient coding ability in C++ and Java as well as good knowledge of HTML/CSS and Javascript/Jquery</li>
-     <li>Learned C++ language through online resources as well as by completing programming exercises</li>
-     <li>Knowledge of common search and sorting algorithms through coding a circle the dot game</li>
-     <li>Critical thinking and problem solving when planning a program</li>
+      <li>Efficient coding ability in C++ and Java as well as good knowledge of HTML/CSS and Javascript/Jquery</li>
+      <li>Learned C++ language through online resources as well as by completing programming exercises</li>
+      <li>Knowledge of common search and sorting algorithms through coding a circle the dot game</li>
+      <li>Critical thinking and problem solving when planning a program</li>
     </ul>
     <ul>
       <li>Knowledgeable in concepts and applications of classes, inheritance and objects through courses and practice</li>
@@ -51,9 +59,25 @@
       <li>Strong knowledge of the different types of data structures through courses and by consulting the documentation</li>
     </ul>
   </div>
-  <div class="centered slide" style="opacity:0">
-    <h2>Languages</h2>
-    <img src="images/mainLG2.png">
+  <div class="black-bar"></div>
+  <div class="parallax" id="second"></div>
+  <div class="black-bar"></div>
+  <div class="slide" style="display: flex">
+    <div style="width: 60%">
+      <h2>Languages</h2>
+      <img src="images/mainLG2.png">
+    </div>
+    <div class="flex">
+      <h2>Work Experience</h2>
+      <p>May 2, 2016 - August 26, 2016</p>
+      <p><b>IT Specialist</b></p>
+      <ul>
+        <li>Worked with mainframes and servers to maintain and keep up to date</li>
+        <li>Improved communication and written skills by writing procedural documentation for Linux and related software</li>
+        <li>Enhanced coding knowledge by writing a variety of bash shell scripts while working with Linux in order to facilitate tasks</li>
+        <li>Developed a knowledge of Linux while in a work environment to monitor and maintain servers</li>
+      </ul>
+    </div>
   </div>
 
 </body>
