Changed fade to slide

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </p>
   </div>
   <!-- <div class="parallax" id="second"></div> -->
-  <div class="fade">
+  <div class="slide programming">
     <h3>Programming</h3>
     <ul>
       <li>Efficient coding ability in C++ and Java as well as good knowledge of HTML/CSS and Javascript/Jquery</li>
