Added projects and fixed website <body> margins

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <li><a href="">Programming</a></li>
       <li><a href="">Communication</a></li>
       <li><a href="">Work Experience</a></li>
-      <li><a href="">Projects</a></li>
+      <li><a href="">Side Projects</a></li>
     </ul>
   </div>
   <div class="parallax" id="first"></div>
@@ -41,7 +41,7 @@
     <p>Hi, my name is Quang-Tri and I am a student at the University of Ottawa studying Software Engineering. My passion for programming started when
       I first learned about the foundations of coding such as the program structure and conditionals. I find creating solutions to problems using these
       concepts incredibly fulfilling and interesting. I have a strong desire to improve my programming and motivated to learn as much as I can.
-      In my spare time I like working on android applications, reading, and practicing my programming.
+      In my spare time I like working on android applications, reading, playing chess, and practicing my programming.
     </p>
   </div>
   <!-- <div class="parallax" id="second"></div> -->
@@ -77,6 +77,21 @@
         <li>Enhanced coding knowledge by writing a variety of bash shell scripts while working with Linux in order to facilitate tasks</li>
         <li>Developed a knowledge of Linux while in a work environment to monitor and maintain servers</li>
       </ul>
+    </div>
+  </div>
+  <h2>Side Projects</h2>
+  <div class="slide projects" style="display: flex">
+    <div style="width: 50%">
+      <div style="width: 80%">
+        <h3>Recipe app</h3>
+        <p>Working on and improving app that was made for a course that finds recipes based on ingredients you enter. Made in android studio using Java.</p>
+        <img src="images/app-screenshot.png">
+      </div>
+    </div>
+    <div class="flex">
+      <h3>This website</h3>
+      <p>Applied what I learned in html/css and javascript to build this website.</p>
+      <img src="images/website-screenshot.png" style="padding-top: 12px">
     </div>
   </div>
 
