--- a/index.html
+++ b/index.html
@@ -30,10 +30,9 @@
 <body>
   <div>
     <ul class="nav">
-      <li><a href="">Programming</a></li>
-      <li><a href="">Communication</a></li>
-      <li><a href="">Work Experience</a></li>
-      <li><a href="">Side Projects</a></li>
+      <li id="programming">Programming</a></li>
+      <li id="experience">Work Experience</a></li>
+      <li id="side-projects">Side Projects</a></li>
     </ul>
   </div>
   <div class="parallax" id="first"></div>
@@ -67,7 +66,7 @@
       <h2>Languages</h2>
       <img src="images/mainLG2.png">
     </div>
-    <div class="flex">
+    <div class="flex experience">
       <h2>Work Experience</h2>
       <p>May 2, 2016 - August 26, 2016</p>
       <p><b>IT Specialist</b></p>
@@ -79,8 +78,8 @@
       </ul>
     </div>
   </div>
-  <h2>Side Projects</h2>
-  <div class="slide projects" style="display: flex">
+  <h2 class="slide" style="margin: 0; background-color: #F2F2F2">Side Projects</h2>
+  <div class="slide side-projects" style="display: flex">
     <div style="width: 50%">
       <div style="width: 80%">
         <h3>Recipe app</h3>
@@ -94,6 +93,21 @@
       <img src="images/website-screenshot.png" style="padding-top: 12px">
     </div>
   </div>
+  <div class="parallax" id="third"></div>
 
+  <script>
+  $("#programming").click(function(){
+    //alert($(".programming").position().top + " "+ $(window).scrollTop());
+    $('body, html').animate({scrollTop:$(".programming").offset().top},700);
+  });
+  $("#experience").click(function(){
+    //alert($(".programming").position().top + " "+ $(window).scrollTop());
+    $('body, html').animate({scrollTop:$(".experience").offset().top},700);
+  });
+  $("#side-projects").click(function(){
+    //alert($(".programming").position().top + " "+ $(window).scrollTop());
+    $('body, html').animate({scrollTop:$(".side-projects").offset().top},700);
+  });
+  </script>
 </body>
 </html>
