--- a/index.html
+++ b/index.html
@@ -9,14 +9,6 @@
   $(document).ready(function(){
     $(window).scroll(function() {
       var bottom_of_window = $(window).scrollTop() + $(window).height()+100;
-      $('.fade').each(function(){
-        var bottom_of_object = $(this).position().top + $(this).outerHeight();
-        if (bottom_of_window > bottom_of_object) {
-          if ($(this).css("opacity")==0) {$(this).fadeTo(500,1);}
-         } else {
-          if ($(this).css("opacity")==1) {$(this).fadeTo(500,0);}
-         }
-       });
       $('.slide').each(function(){
         var bottom_of_object = $(this).position().top + $(this).outerHeight();
         if (bottom_of_window > bottom_of_object){
@@ -78,22 +70,24 @@
       </ul>
     </div>
   </div>
-  <h2 class="slide" style="margin: 0; background-color: #F2F2F2">Side Projects</h2>
-  <div class="slide side-projects" style="display: flex">
+  <div class="slide" style="display: flex; flex-wrap: wrap; margin-top: 5%">
+    <h2 class="slide" style="margin: 0; width: 100%">Side Projects</h2>
     <div style="width: 50%">
-      <div style="width: 80%">
+      <div class="centered" style="width: 80%">
         <h3>Recipe app</h3>
         <p>Working on and improving app that was made for a course that finds recipes based on ingredients you enter. Made in android studio using Java.</p>
         <img src="images/app-screenshot.png">
       </div>
     </div>
-    <div class="flex">
+    <div class="projects centered" style="width: 50%">
       <h3>This website</h3>
       <p>Applied what I learned in html/css and javascript to build this website.</p>
       <img src="images/website-screenshot.png" style="padding-top: 12px">
     </div>
   </div>
-  <div class="parallax" id="third"></div>
+  <div class="centered back-to-top">
+    <p>Back to top</p>
+  </div>
 
   <script>
   $("#programming").click(function(){
@@ -108,6 +102,9 @@
     //alert($(".programming").position().top + " "+ $(window).scrollTop());
     $('body, html').animate({scrollTop:$(".side-projects").offset().top},700);
   });
+  $('.back-to-top').click(function(){
+    $('body, html').animate({scrollTop:$('.nav').offset().top}, 700);
+  })
   </script>
 </body>
 </html>
