--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <img src="images/website-screenshot.png" style="padding-top: 12px">
     </div>
   </div>
-  <div class="centered back-to-top">
+  <div class="back-to-top" style="display: inline-block; margin-left: 45%">
     <p>Back to top</p>
   </div>
 
