--- a/index.html
+++ b/index.html
@@ -76,13 +76,13 @@
       <div class="centered" style="width: 80%">
         <h3>Recipe app</h3>
         <p>Working on and improving app that was made for a course that finds recipes based on ingredients you enter. Made in android studio using Java.</p>
-        <img src="images/app-screenshot.png">
+        <img src="images/app-screenshot.PNG">
       </div>
     </div>
     <div class="projects centered" style="width: 50%">
       <h3>This website</h3>
       <p>Applied what I learned in html/css and javascript to build this website.</p>
-      <img src="images/website-screenshot.png" style="padding-top: 12px">
+      <img src="images/website-screenshot.PNG" style="padding-top: 12px">
     </div>
   </div>
   <div class="back-to-top" style="display: inline-block; margin-left: 45%">
