--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       </ul>
     </div>
   </div>
-  <div class="slide" style="display: flex; flex-wrap: wrap; margin-top: 5%">
+  <div class="slide side-projects" style="display: flex; flex-wrap: wrap; margin-top: 5%">
     <h2 class="slide" style="margin: 0; width: 100%">Side Projects</h2>
     <div style="width: 50%">
       <div class="centered" style="width: 80%">
