--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
       <img src="images/mainLG2.png">
     </div>
     <div class="flex experience">
-      <h2>Work Experience</h2>
-      <p>May 2, 2016 - August 26, 2016</p>
+      <h2 class="centered">Work Experience</h2>
+      <p class="centered">May 2, 2016 - August 26, 2016</p>
       <p><b>IT Specialist</b></p>
       <ul>
         <li>Worked with mainframes and servers to maintain and keep up to date</li>
@@ -71,11 +71,11 @@
     </div>
   </div>
   <div class="slide side-projects" style="display: flex; flex-wrap: wrap; margin-top: 5%">
-    <h2 class="slide" style="margin: 0; width: 100%">Side Projects</h2>
+    <h2 class="slide centered" style="margin: 0; width: 100%">Side Projects</h2>
     <div style="width: 50%">
-      <div class="centered" style="width: 80%">
+      <div class="centered">
         <h3>Recipe app</h3>
-        <p>Working on and improving app that was made for a course that finds recipes based on ingredients you enter. Made in android studio using Java.</p>
+        <p style="padding: 0 10%">Working on and improving app that was made for a course that finds recipes based on ingredients you enter. Made in android studio using Java.</p>
         <img src="images/app-screenshot.PNG">
       </div>
     </div>
@@ -85,7 +85,7 @@
       <img src="images/website-screenshot.PNG" style="padding-top: 12px">
     </div>
   </div>
-  <div class="back-to-top" style="display: inline-block; margin-left: 45%">
+  <div class="back-to-top centered">
     <p>Back to top</p>
   </div>
 
