--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
       <img src="images/website-screenshot.PNG" style="padding-top: 12px">
     </div>
   </div>
-  <div class="back-to-top centered">
-    <p>Back to top</p>
+  <div class="centered">
+    <div class="back-to-top" style="display: inline-block">Back To Top</div>
   </div>
 
   <script>
