--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
       <img src="images/website-screenshot.PNG" style="padding-top: 12px">
     </div>
   </div>
+  <div style="padding: 5% 0"></div>
   <div class="centered">
     <div class="back-to-top" style="display: inline-block">Back To Top</div>
   </div>
