--- a/index.html
+++ b/index.html
@@ -39,15 +39,15 @@
   <div class="slide programming">
     <h3>Programming</h3>
     <ul>
-      <li>Efficient coding ability in C++ and Java as well as good knowledge of HTML/CSS and Javascript/Jquery</li>
-      <li>Learned C++ language through online resources as well as by completing programming exercises</li>
-      <li>Knowledge of common search and sorting algorithms through coding a circle the dot game</li>
+      <li>Efficient coding ability in Java and Python as well as good knowledge of C++, HTML/CSS, and Javascript/Jquery</li>
+      <li>Java: 3 years of programming experience including work experience. Knowledgeable in concepts and applications of classes, inheritance and objects</li>
+      <li>Working understanding of the MVC software pattern</li>
       <li>Critical thinking and problem solving when planning a program</li>
     </ul>
     <ul>
+      <li>Ability to analyze an algorithm's O-notation / complexity</li>
       <li>Knowledgeable in concepts and applications of classes, inheritance and objects through courses and practice</li>
       <li>Strong desire to learn and capable of learning a new language quickly</li>
-      <li>Strong knowledge of the different types of data structures through courses and by consulting the documentation</li>
     </ul>
   </div>
   <div class="black-bar"></div>
@@ -60,13 +60,11 @@
     </div>
     <div class="flex experience">
       <h2 class="centered">Work Experience</h2>
-      <p class="centered">May 2, 2016 - August 26, 2016</p>
-      <p><b>IT Specialist</b></p>
       <ul>
-        <li>Worked with mainframes and servers to maintain and keep up to date</li>
-        <li>Improved communication and written skills by writing procedural documentation for Linux and related software</li>
-        <li>Enhanced coding knowledge by writing a variety of bash shell scripts while working with Linux in order to facilitate tasks</li>
-        <li>Developed a knowledge of Linux while in a work environment to monitor and maintain servers</li>
+        <li>Managed virtual machines on the mainframe to keep them up to date using software and Linux</li>
+        <li>Maintained and developed patches for a financial application in Java while working for the Canada Revenue Agency</li>
+        <li>Applied my knowledge of the MVC software architectural pattern while working on the application</li>
+        <li>Developed acceptance tests for the application using the fitnesse framework</li>
       </ul>
     </div>
   </div>
