--- a/index.html
+++ b/index.html
@@ -28,37 +28,36 @@
     </ul>
   </div>
   <div class="parallax" id="first"></div>
-  <div class="info">
-    <p>Hi, my name is Quang-Tri and I am a student at the University of Ottawa studying Software Engineering. My passion for programming started when
-      I first learned about the foundations of coding such as the program structure and conditionals. I find creating solutions to problems using these
-      concepts incredibly fulfilling and interesting. I have a strong desire to improve my programming and motivated to learn as much as I can.
-      In my spare time I like working on android applications, reading, playing chess, and practicing my programming.
-    </p>
+  <div class="info white-background">
+    <span class="vertical-centered">
+      <p>Hi, my name is Quang-Tri and I am a student at the University of Ottawa studying Software Engineering. I am an experienced Java programmer with knowledge in both Python and C++. I have a strong desire to improve my programming and motivated to learn as much as I can.
+      </p>
+    </span>
   </div>
   <!-- <div class="parallax" id="second"></div> -->
-  <div class="slide programming">
-    <h3>Programming</h3>
-    <ul>
-      <li>Efficient coding ability in Java and Python as well as good knowledge of C++, HTML/CSS, and Javascript/Jquery</li>
-      <li>Java: 3 years of programming experience including work experience. Knowledgeable in concepts and applications of classes, inheritance and objects</li>
-      <li>Working understanding of the MVC software pattern</li>
-      <li>Critical thinking and problem solving when planning a program</li>
-    </ul>
-    <ul>
-      <li>Ability to analyze an algorithm's O-notation / complexity</li>
-      <li>Knowledgeable in concepts and applications of classes, inheritance and objects through courses and practice</li>
-      <li>Strong desire to learn and capable of learning a new language quickly</li>
-    </ul>
+  <div class="programming grey-background">
+    <span class="vertical-centered">
+      <h1 class="centered">Programming</h1>
+      <ul>
+        <li>Efficient coding ability in Java and Python as well as good knowledge of C++, HTML/CSS, and Javascript/Jquery</li>
+        <li>Java: 3 years of programming experience including work experience. Knowledgeable in concepts and applications of classes, inheritance and objects</li>
+        <li>Working understanding of the MVC software pattern</li>
+        <li>Critical thinking and problem solving when planning a program</li>
+        <li>Ability to analyze an algorithm's O-notation / complexity</li>
+      </ul>
+    </span>
   </div>
   <div class="black-bar"></div>
   <div class="parallax" id="second"></div>
   <div class="black-bar"></div>
-  <div class="slide" style="display: flex">
-    <div style="width: 60%">
-      <h2>Languages</h2>
+  <div class="languages white-background">
+    <span class="vertical-centered">
+      <h1>Languages</h1>
       <img src="images/mainLG2.png">
-    </div>
-    <div class="flex experience">
+    </span>
+  </div>
+  <div>
+    <div class="grey-background experience">
       <h2 class="centered">Work Experience</h2>
       <ul>
         <li>Managed virtual machines on the mainframe to keep them up to date using software and Linux</li>
@@ -68,22 +67,6 @@
       </ul>
     </div>
   </div>
-  <div class="slide side-projects" style="display: flex; flex-wrap: wrap; margin-top: 5%">
-    <h2 class="slide centered" style="margin: 0; width: 100%">Side Projects</h2>
-    <div style="width: 50%">
-      <div class="centered">
-        <h3>Recipe app</h3>
-        <p style="padding: 0 10%">Working on and improving app that was made for a course that finds recipes based on ingredients you enter. Made in android studio using Java.</p>
-        <img src="images/app-screenshot.PNG">
-      </div>
-    </div>
-    <div class="projects centered" style="width: 50%">
-      <h3>This website</h3>
-      <p>Applied what I learned in html/css and javascript to build this website.</p>
-      <img src="images/website-screenshot.PNG" style="padding-top: 12px">
-    </div>
-  </div>
-  <div style="padding: 5% 0"></div>
   <div class="centered">
     <div class="back-to-top" style="display: inline-block">Back To Top</div>
   </div>
