--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
   <title>Resume</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="mycss.css">
-  <link rel="stylesheet" type="text/css" href="slick/slick.css" />
-  <link rel="stylesheet" type="text/css" href="slick/slick-theme.css" />
   <meta charset="utf-8" />
 </head>
 
@@ -14,10 +12,12 @@
   <nav class="navbar navbar-inverse">
     <div class="container-fluid">
       <div class="navbar-header">
-        <a class="navbar-brand" href="index.html">BOOKY</a>
+        <a class="navbar-brand" href="index.html">Quang-Tri Do</a>
       </div>
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
+        <li><a href="#">Programming</a></li>
+        <li><a href="#">Work Experience</a></li>
+        <li><a href="#">Side Projects</a></li>
       </ul>
     </div>
   </nav>
@@ -26,7 +26,24 @@
     <p>My Resume</p>
   </div>
 
-  <div class="space-medium"></div>
+  <div class="container preface text-center">
+    <h2>Preface</h2>
+    <p>Hi, my name is Quang-Tri and I am a student at the University of Ottawa studying Software Engineering. I am an experienced Java programmer with knowledge in both Python and C++. I have a strong desire to improve my programming and motivated to learn as much as I can.
+    </p>
+  </div>
+
+  <div class="parallax" id="first"></div>
+
+  <div class="container programming">
+    <h2>Programming</h2>
+    <ul>
+      <li>Efficient coding ability in Java and Python as well as good knowledge of C++, HTML/CSS, and Javascript/Jquery</li>
+      <li>Java: 3 years of programming experience including work experience. Knowledgeable in concepts and applications of classes, inheritance and objects</li>
+      <li>Working understanding of the MVC software pattern</li>
+      <li>Critical thinking and problem solving when planning a program</li>
+      <li>Ability to analyze an algorithm's O-notation / complexity</li>
+    </ul>
+  </div>
 
 
   <!-- jQuery library -->
