added side project pictures

--- a/index.html
+++ b/index.html
@@ -45,6 +45,20 @@
     </ul>
   </div>
 
+  <div class="container side-projects">
+    <h2>Side Projects</h2>
+    <div class="row">
+      <div class="col-md-6">
+        <h3 class="text-center">Bus Texter</h3>
+        <img class="center-block" src="images/bus-texter.png" />
+      </div>
+      <div class="col-md-6">
+        <h3 class="text-center">Automify</h3>
+        <img class="center-block" src="images/Automify.png"/>
+      </div>
+    </div>
+  </div>
+
 
   <!-- jQuery library -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
