--- a/index.html
+++ b/index.html
@@ -49,11 +49,16 @@
     <h2>Side Projects</h2>
     <div class="row">
       <div class="col-md-6">
-        <h3 class="text-center">Bus Texter</h3>
-        <img class="center-block" src="images/bus-texter.png" />
+        <div class="image-wrapper">
+          <img class="center-block" src="images/bus-texter.png" />
+          <div class="center-block image-caption">
+            <div class="center-block project-title">
+              <p>Bus Tester</p>
+            </div>
+          </div>
+        </div>
       </div>
       <div class="col-md-6">
-        <h3 class="text-center">Automify</h3>
         <img class="center-block" src="images/Automify.png"/>
       </div>
     </div>
