added projects section

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </nav>
   <div class="jumbotron">
     <h1>Quang-Tri Do</h1>
-    <p>My Resume</p>
+    <p>Resume</p>
   </div>
 
   <div class="container preface text-center">
@@ -50,9 +50,10 @@
   <div class="container side-projects">
     <h2>Side Projects</h2>
     <div class="row">
-      <div class="col-md-6">
+      <div class="col-md-1"></div>
+      <div class="col-md-5">
         <div class="image-wrapper">
-          <img class="center-block" src="images/bus-texter.png" />
+          <img class="center-block" src="images/bustexter.png" />
           <div class="center-block image-caption">
             <div class="center-block project-title">
               <p>Bus Tester</p>
@@ -61,7 +62,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-6">
+      <div class="col-md-5">
         <div class="image-wrapper">
           <img class="center-block" src="images/Automify.png" />
           <div class="center-block image-caption">
@@ -72,6 +73,7 @@
           </div>
         </div>
       </div>
+      <div class="col-md-1"></div>
     </div>
   </div>
 
@@ -87,6 +89,9 @@
           <p>A python tool that texts which bus number and route to take to get from location to destination to your mobile number.</p>
           <p>Built using the GMail and Google maps API. The Google maps API is used to get a bus route from location to destination, which is then formatted into a readable output</p>
           <p>The GMail API receives incoming mobile texts with location and destination specified, and then sends the Google maps results through an email which is sent as a mobile text</p>
+          <div>
+            <img class="modal-image" src="images/bustexter-modal.png" />
+          </div>
         </div>
       </div>
     </div>
@@ -101,8 +106,12 @@
           <h4 class="modal-title">Automify</h4>
         </div>
         <div class="modal-body">
-          <p>Developed with a group of friends during the future of work hackathon.</p>
-          <p>A chrome extension that displays the likelihood of automation of a job posting on the Indeed search engine. Built using Python, HTML, CSS, and JavaScript.</p>
+          <p>Developed with a group of friends during the future of work hackathon. A hackathon that focuses on the future automation of work by artificial intelligence and automation.</p>
+          <p>Our project was designed to give prospective job seekers a way to easily identify the likelihood of a job being automated during their job search.</p>
+          <p>A chrome extension that displays the likelihood of automation of a job posting on the Indeed search engine. The data was taken from a dataset that was made available by the hackathon. Built using HTML, CSS, and JavaScript.</p>
+          <div>
+            <img class="modal-image" src="images/automify-modal.png" />
+          </div>
         </div>
       </div>
     </div>
