--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" type="text/css" href="tipped.css">
   <meta charset="utf-8" />
 </head>
-
+<script src="index.js"></script> 
 <body>
   <nav class="navbar navbar-inverse">
     <div class="container-fluid">
@@ -16,9 +16,9 @@
         <a class="navbar-brand" href="index.html">Quang-Tri Do</a>
       </div>
       <ul class="nav navbar-nav">
-        <li><a href="#">Programming</a></li>
-        <li><a href="#">Work Experience</a></li>
-        <li><a href="#">Side Projects</a></li>
+        <li><a id="programming" href="#">Programming</a></li>
+        <li><a id="work_experience" href="#">Work Experience</a></li>
+        <li><a id="side_projects" href="#">Side Projects</a></li>
       </ul>
     </div>
   </nav>
