--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <link rel="stylesheet" type="text/css" href="tipped.css">
   <meta charset="utf-8" />
 </head>
-<script src="index.js"></script> 
 <body>
   <nav class="navbar navbar-inverse">
     <div class="container-fluid">
@@ -123,7 +122,7 @@
   <!-- Latest compiled JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-  <script type="text/javascript" src="main.js"></script>
+  <script type="text/javascript" src="index.js"></script>
   <script type="text/javascript" src="tipped.js"></script>
 
 </body>
