--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <a id="main-navbar" href="#">Resume</a>
     <a id="programming" href="#">Programming</a>
     <a id="side-projects" href="#">Side Projects</a>
-    <a id="work-experience" href="#">Work Experience</a>
+    <!-- <a id="work-experience" href="#">Work Experience</a> -->
   </div>
 
   <div class="container preface text-center">
